SUBDIRS = src/lib src/bin tests

dist_man_MANS = man/csvi.1

EXTRA_DIST = \
             AGENTS.md \
             bootstrap \
             build-installer \
             docs/architecture.md \
             docs/build.md \
             docs/tutorial.md \
             completions/csvi.bash \
             completions/csvi.zsh \
             installer-template

AM_DISTCHECK_CONFIGURE_FLAGS = --enable-debug
